[metadata]
name = pypair
version = 3.0.8
author = Jee Vang
author_email = vangjee@gmail.com
description = Pairwise association measures of statistical variable types
long_description: file: README.md
long_description_content_type = text/markdown
description_file = README.md
url = https://github.com/oneoffcoder/py-pair
keywords = statistics, pairwise, association, correlation, concordance, measurement, strength, pyspark
install_requires = scipy, numpy, pandas, scikit-learn, pyspark
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 5 - Production/Stable
include_package_data = True
test_suite = nose.collector

[flake8]
max-line-length = 120
ignore = E501 E731

[nosetests]
verbosity = 3
with-doctest = 1
with-coverage = 1
with-id = 1
cover-erase = 1
cover-html = 1
cover-html-dir = coverage
cover-package = pypair
detailed-errors = 1